<package format="2">
  <name>turtlesim_control</name>
  <version>0.0.0</version>
  <description>تحكم في turtlesim باستخدام بايثون وROS2</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
